[project]
name = "langgraph_and_agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.28",
    "langchain-core>=0.3.83",
    "langchain-google-genai>=2.1.12",
    "langgraph>=1.0.1",
    "python-dotenv>=1.2.2",
]
